--- a/src/main/resources/application-pr.properties
+++ b/src/main/resources/application-pr.properties
@@ -14,4 +14,6 @@ maxTotal=1000
 connectionRequestTimeout=3000
 connectTimeout=30000
 socketTimeout=30000
-
+spring.cache.type=redis
+spring.redis.host=${CACHE_HOST}
+spring.redis.port=${CACHE_PORT}
