--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=DEBUG
+logging.level.root=TRACE
 # Postgres connection settings
 server.error.whitelabel.enabled=false
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -14,4 +14,7 @@ maxTotal=1000
 connectionRequestTimeout=3000
 connectTimeout=30000
 socketTimeout=30000
+spring.cache.type=redis
+spring.redis.host=${CACHE_HOST}
+spring.redis.port=${CACHE_PORT}
 
