--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 logging.level.root=TRACE
 # Postgres connection settings
 server.error.whitelabel.enabled=false
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 weatherToken=${TOKEN}
-weatherAPI=http://api.openweathermap.org/data/2.5/weather?q={city}&APPID={weatherToken}
+weatherAPI=http://api.openweathermap.org/data/2.5/weather?q={city}&units=metric&APPID={weatherToken}
 maxPerRoute=100
 maxTotal=1000
 connectionRequestTimeout=3000
@@ -17,4 +17,5 @@ socketTimeout=30000
 spring.cache.type=redis
 spring.redis.host=${CACHE_HOST}
 spring.redis.port=${CACHE_PORT}
+spring.cache.redis.time-to-live=20000
 
